# image-periscope

./: .gitignore  Makefile  README.md  build.py  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: lint.mdc
.github/workflows/: python-app.yml  release.yml
image_periscope/: __init__.py  app.py  cli.py  image_utils.py
image_periscope/templates/: compare.html  index.html  view_html.html
image_viewer/: app.py  cli.py  image_utils.py
image_viewer/templates/: gallery.html  index.html
tests/: test_app.py  test_image_utils.py
