[project]
name = "image_viewer"
version = "0.1.0"
description = ""
authors = [
    {name = "kakibara",email = "moritarizumu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (==2.2.2)",
    "pytest (==7.1.2)",
    "jinja2 (==3.1.2)",
    "werkzeug (==2.2.2)",
    "pillow (==9.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
