[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "image_viewer"
version = "0.4.0"
description = "A web application to display images from a specified directory while maintaining the directory structure."
authors = ["kakibara <moritarizumu@gmail.com>"]
readme = "README.md"
packages = [{include = "image_viewer"}]

[tool.poetry.dependencies]
python = ">=3.12"
flask = "2.2.2"
jinja2 = "3.1.2"
werkzeug = "2.2.2"
pillow = ">=9.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.2"

[tool.poetry.scripts]
image-viewer = "image_viewer.cli:main"
